feat(security): update CORS configuration to allow additional domains and enhance security filter chain